[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://ItemSpawner.tscn" type="PackedScene" id=7]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 2, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.145098, 0.352941, 0.0666667, 1 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -50, -1, -50, -50, 1, -50, 50, -1, -50, -50, -1, 50, -50, 1, 50, 50, 1, -50, 50, -1, 50, 50, 1, 50 )

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -48.9838, 0, -47.6759, 0, 0, 0, 0, 0, 0, 46.8377, 0, -46.3827, 0, 0, 0, 0, 0, 0, 48.175, 0, 47.2857, 0, 0, 0, 0, 0, 0, -48.2712, 0, 45.8493, 0, 0, 0, 0, 0, 0, -3.12596, 0, 31.4862, 0, 0, 0, 0, 0, 0, -46.6294, 0, 18.1479, 0, 0, 0, 0, 0, 0, -42.1974, -1.99458, -13.1144, 0, 0, 0, 0, 0, 0, -48.9838, 0, -47.6759 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="NavigationMesh" id=5]
vertices = PoolVector3Array( 25.6, 1.4, 34.9, 23.2, 1.4, 35.2, 23.2, 1.4, 42.1, 29.5, 1.4, 49.3, 36.1, 1.4, 49.3, 23.2, 1.4, 23.8, 23.2, 1.4, 31, 25.6, 1.4, 31.3, 27.1, 1.4, 23.8, 19.3, 1.4, 9.1, 23.2, 1.4, 9.4, 49.3, 1.4, -6.5, 49.3, 1.4, -12.5, -43.4, 1.4, -49.4, -49.4, 1.4, -49.4, -49.4, 1.4, -43.4, -26, 1.4, 49.3, -26, 1.4, 42.1, -30.8, 1.4, 42.1, -37.7, 1.4, 49.3, 49.3, 1.4, -43.4, 49.3, 1.4, -49.4, 43, 1.4, -49.4, -31.1, 1.4, 38.2, -26, 1.4, 37.9, -26, 1.4, 30.7, 42.7, 1.4, 49.3, 49.3, 1.4, 49.3, 49.3, 1.4, 43, 23.2, 1.4, 42.1, 23.2, 1.4, 49.3, 29.5, 1.4, 49.3, -14.9, 1.4, 23.8, -21.8, 1.4, 23.8, -21.8, 1.4, 30.7, -19.4, 1.4, 31.3, -10.1, 1.4, 31, 49.3, 1.4, -18.8, 12.1, 1.4, -49.4, 5.8, 1.4, -49.4, 8.8, 1.4, 10.3, 19, 1.4, 10.3, 19.3, 1.4, 9.1, 27.1, 1.4, 23.8, 25.6, 1.4, 31.3, 25.6, 1.4, 34.9, 36.1, 1.4, 49.3, 49.3, 1.4, 30.4, 49.3, 1.4, 24.4, 19, 1.4, 19.6, 19, 1.4, 14.2, 9.1, 1.4, 14.2, 7.6, 1.4, 19.6, 27.4, 1.4, 19.9, 49.3, 1.4, 12.1, 49.3, 1.4, 5.8, 7.6, 1.4, 19.6, 9.1, 1.4, 14.2, -0.799999, 1.4, 14.2, -3.2, 1.4, 19.9, -12.5, 1.4, -49.4, -18.8, 1.4, -49.4, -49.4, 1.4, -24.8, -7.4, 1.4, 20.2, -3.2, 1.4, 19.9, -0.799999, 1.4, 14.2, -10.7, 1.4, 14.2, -14.6, 1.4, 19.9, 23.2, 1.4, 9.4, 23.2, 1.4, 19.6, 27.4, 1.4, 19.9, 49.3, 1.4, 5.8, 49.3, 1.4, -0.199997, -12.2, 1.4, 42.1, -21.8, 1.4, 42.1, -21.8, 1.4, 49.3, -11.6, 1.4, 49.3, 49.3, 1.4, -18.8, 18.1, 1.4, -49.4, 12.1, 1.4, -49.4, -2.6, 1.4, 42.1, -12.2, 1.4, 42.1, -11.6, 1.4, 49.3, -1.4, 1.4, 49.3, -49.4, 1.4, -18.8, -49.4, 1.4, -12.5, -25.7, 1.4, 9.1, 7, 1.4, 42.1, -2.6, 1.4, 42.1, -1.4, 1.4, 49.3, 8.8, 1.4, 49.3, -49.4, 1.4, -0.199997, -49.4, 1.4, 5.8, -25.7, 1.4, 9.1, 16.9, 1.4, 42.1, 7, 1.4, 42.1, 8.8, 1.4, 49.3, 19, 1.4, 49.3, -49.4, 1.4, 12.1, -26, 1.4, 16.3, -25.7, 1.4, 9.1, -49.4, 1.4, 5.8, 16.9, 1.4, 42.1, 19, 1.4, 49.3, 19, 1.4, 42.1, 17.2, 1.4, 38.2, 16.9, 1.4, 42.1, 19, 1.4, 42.1, 19, 1.4, 35.2, -24.8, 1.4, -49.4, -49.4, 1.4, -31.1, -49.4, 1.4, -24.8, -18.8, 1.4, -49.4, 17.2, 1.4, 38.2, 19, 1.4, 35.2, 9.4, 1.4, 35.2, 7.6, 1.4, 37.9, 27.4, 1.4, 19.9, 27.1, 1.4, 23.8, 49.3, 1.4, 24.4, 49.3, 1.4, 18.1, 7.6, 1.4, 37.9, 9.4, 1.4, 35.2, -0.199997, 1.4, 35.2, -2.3, 1.4, 37.9, 49.3, 1.4, -18.8, 49.3, 1.4, -24.8, 24.4, 1.4, -49.4, 18.1, 1.4, -49.4, -2.3, 1.4, 37.9, -0.199997, 1.4, 35.2, -9.8, 1.4, 35.2, -12.2, 1.4, 37.9, -31.1, 1.4, -49.4, -49.4, 1.4, -37.1, -49.4, 1.4, -31.1, -24.8, 1.4, -49.4, -12.2, 1.4, 37.9, -9.8, 1.4, 35.2, -19.1, 1.4, 35.2, -21.8, 1.4, 37.9, -31.1, 1.4, 38.2, -26, 1.4, 23.5, -26, 1.4, 16.3, -49.4, 1.4, 18.1, -49.4, 1.4, 24.4, -21.8, 1.4, 30.7, -21.8, 1.4, 37.9, -19.1, 1.4, 35.2, -19.4, 1.4, 31.3, -21.8, 1.4, 9.4, -11, 1.4, 10.3, -1.1, 1.4, 10.3, -0.199997, 1.4, -49.4, -6.5, 1.4, -49.4, -49.4, 1.4, -24.8, 27.4, 1.4, 19.9, 49.3, 1.4, 18.1, 49.3, 1.4, 12.1, -7.7, 1.4, 23.8, -14.9, 1.4, 23.8, -10.1, 1.4, 31, -7.7, 1.4, 23.8, -10.1, 1.4, 31, -0.499996, 1.4, 31, -2.9, 1.4, 23.8, 9.1, 1.4, 31, 19, 1.4, 31, 19, 1.4, 23.8, 7.9, 1.4, 23.8, -49.4, 1.4, -6.5, -49.4, 1.4, -0.199997, -25.7, 1.4, 9.1, -0.499996, 1.4, 31, 9.1, 1.4, 31, 7.9, 1.4, 23.8, -2.9, 1.4, 23.8, 19.3, 1.4, 9.1, 49.3, 1.4, -12.5, 49.3, 1.4, -18.8, -49.4, 1.4, 12.1, -49.4, 1.4, 18.1, -26, 1.4, 16.3, -7.4, 1.4, 20.2, -7.7, 1.4, 23.8, -2.9, 1.4, 23.8, -3.2, 1.4, 19.9, -49.4, 1.4, -12.5, -49.4, 1.4, -6.5, -25.7, 1.4, 9.1, -6.5, 1.4, -49.4, -12.5, 1.4, -49.4, -49.4, 1.4, -24.8, 49.3, 1.4, -31.1, 49.3, 1.4, -37.1, 36.7, 1.4, -49.4, 30.4, 1.4, -49.4, -14.6, 1.4, 19.9, -10.7, 1.4, 14.2, -20.3, 1.4, 14.2, -21.8, 1.4, 19.9, -49.4, 1.4, -24.8, -49.4, 1.4, -18.8, -25.7, 1.4, 9.1, -21.8, 1.4, 9.4, -21.8, 1.4, 19.9, -20.3, 1.4, 14.2, -20.6, 1.4, 10.6, -1.1, 1.4, 10.3, 8.8, 1.4, 10.3, 19.3, 1.4, 9.1, -25.7, 1.4, 9.1, -21.8, 1.4, 9.4, -21.8, 1.4, 9.4, -20.6, 1.4, 10.6, -11, 1.4, 10.3, -37.7, 1.4, 49.3, -30.8, 1.4, 42.1, -31.1, 1.4, 38.2, -49.4, 1.4, 30.4, -49.4, 1.4, 36.7, -49.4, 1.4, 43, -49.4, 1.4, 49.3, -37.7, 1.4, 49.3, -37.1, 1.4, -49.4, -43.4, 1.4, -49.4, -49.4, 1.4, -43.4, 49.3, 1.4, -37.1, 49.3, 1.4, -43.4, 43, 1.4, -49.4, 36.7, 1.4, -49.4, 42.7, 1.4, 49.3, 49.3, 1.4, 43, 49.3, 1.4, 36.7, -49.4, 1.4, 24.4, -49.4, 1.4, 30.4, -31.1, 1.4, 38.2, -31.1, 1.4, 38.2, -26, 1.4, 30.7, -26, 1.4, 23.5, -49.4, 1.4, 36.7, -49.4, 1.4, 43, -37.7, 1.4, 49.3, -37.1, 1.4, -49.4, -49.4, 1.4, -43.4, -49.4, 1.4, -37.1, -31.1, 1.4, -49.4, 49.3, 1.4, -18.8, 5.8, 1.4, -49.4, -0.199997, 1.4, -49.4, -49.4, 1.4, -24.8, -25.7, 1.4, 9.1, 19.3, 1.4, 9.1, 49.3, 1.4, -31.1, 30.4, 1.4, -49.4, 24.4, 1.4, -49.4, 49.3, 1.4, -24.8, 36.1, 1.4, 49.3, 42.7, 1.4, 49.3, 49.3, 1.4, 36.7, 49.3, 1.4, 30.4, 23.2, 1.4, 9.4, 49.3, 1.4, -0.199997, 49.3, 1.4, -6.5, -24.8, 5.6, 38.8, -29.9, 5.6, 39.1, -29.9, 5.6, 40.9, -24.8, 5.6, 41.2, -22.7, 5.6, 40.9, -22.7, 5.6, 39.1, -24.8, 5.6, 41.2, -24.8, 5.4, 49.3, -23, 5.4, 49.3, -22.7, 5.6, 40.9, -23, 5.4, 10.3, -24.8, 5.4, 10.3, -24.8, 5.4, 17.2, -22.7, 5.4, 21.1, -13.1, 5.6, 39.1, -22.7, 5.6, 39.1, -22.7, 5.6, 40.9, -13.1, 5.6, 40.9, -22.7, 5.4, 21.1, -24.8, 5.4, 17.2, -24.8, 5.4, 24.4, -23, 5.4, 22.9, -8.6, 5.4, 22.6, -8.6, 5.4, 21.1, -15.8, 5.4, 21.1, -16.1, 5.4, 22.6, 6.1, 5.6, 40.9, 16, 5.6, 40.9, 16, 5.6, 39.1, 6.1, 5.6, 39.1, -16.1, 5.4, 22.6, -15.8, 5.4, 21.1, -22.7, 5.4, 21.1, -23, 5.4, 22.9, -3.5, 5.6, 40.9, 6.1, 5.6, 40.9, 6.1, 5.6, 39.1, -3.5, 5.6, 39.1, -22.7, 5.6, 39.1, -23, 5.4, 31, -24.8, 5.4, 31.6, -24.8, 5.6, 38.8, -23, 5.4, 31, -23, 5.4, 22.9, -24.8, 5.4, 24.4, -24.8, 5.4, 31.6, -3.5, 5.6, 39.1, -13.1, 5.6, 39.1, -13.1, 5.6, 40.9, -3.5, 5.6, 40.9, 22, 5.4, 10.3, 20.2, 5.4, 10.3, 19.9, 5.4, 11.5, 19.9, 5.4, 13, 22, 5.4, 20.5, 22, 5.4, 34.3, 24.4, 5.4, 34, 24.1, 5.4, 32.2, 22, 5.4, 31.9, 19.9, 5.4, 32.2, 19.9, 5.4, 34, 19.9, 5.4, 22.6, 19.9, 5.4, 32.2, 22, 5.4, 31.9, 22, 5.4, 22.9, 22, 5.4, 22.9, 26.2, 5.4, 22.6, 26.2, 5.4, 20.8, 22, 5.4, 20.5, 19.9, 5.4, 20.8, 19.9, 5.4, 22.6, 8.8, 5.4, 20.8, -2, 5.4, 20.8, -2, 5.4, 22.6, 8.8, 5.4, 22.6, 20.2, 5.4, 49.3, 22, 5.4, 49.3, 22, 5.4, 41.8, 20.2, 5.4, 41.5, 0.100002, 5.4, 11.5, -9.8, 5.4, 11.5, -9.8, 5.4, 13, 0.100002, 5.4, 13, 20.2, 5.4, 41.5, 22, 5.4, 41.8, 22, 5.4, 34.3, 19.9, 5.4, 34, 10.3, 5.4, 32.2, 0.700001, 5.4, 32.2, 0.700001, 5.4, 34, 10.3, 5.4, 34, 19.9, 5.4, 20.8, 8.8, 5.4, 20.8, 8.8, 5.4, 22.6, 19.9, 5.4, 22.6, 19.9, 5.4, 32.2, 10.3, 5.4, 32.2, 10.3, 5.4, 34, 19.9, 5.4, 34, -8.9, 5.4, 32.2, -18.2, 5.4, 32.2, -18.2, 5.4, 34, -8.9, 5.4, 34, 10, 5.4, 11.5, 0.100002, 5.4, 11.5, 0.100002, 5.4, 13, 10, 5.4, 13, -19.4, 5.4, 11.5, -19.4, 5.4, 13, -9.8, 5.4, 13, -9.8, 5.4, 11.5, 19.9, 5.4, 11.5, 10, 5.4, 11.5, 10, 5.4, 13, 19.9, 5.4, 13, 0.700001, 5.4, 32.2, -8.9, 5.4, 32.2, -8.9, 5.4, 34, 0.700001, 5.4, 34, 22, 5.4, 20.5, 19.9, 5.4, 13, 19.9, 5.4, 20.8 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 3 ), PoolIntArray( 3, 0, 4 ), PoolIntArray( 6, 5, 7 ), PoolIntArray( 7, 5, 8 ), PoolIntArray( 10, 9, 11 ), PoolIntArray( 11, 9, 12 ), PoolIntArray( 15, 14, 13 ), PoolIntArray( 17, 16, 18 ), PoolIntArray( 18, 16, 19 ), PoolIntArray( 22, 21, 20 ), PoolIntArray( 25, 24, 23 ), PoolIntArray( 28, 27, 26 ), PoolIntArray( 31, 30, 29 ), PoolIntArray( 34, 33, 35 ), PoolIntArray( 35, 33, 32 ), PoolIntArray( 35, 32, 36 ), PoolIntArray( 39, 38, 37 ), PoolIntArray( 40, 42, 41 ), PoolIntArray( 44, 43, 45 ), PoolIntArray( 45, 43, 46 ), PoolIntArray( 46, 43, 47 ), PoolIntArray( 47, 43, 48 ), PoolIntArray( 50, 49, 51 ), PoolIntArray( 51, 49, 52 ), PoolIntArray( 55, 54, 53 ), PoolIntArray( 57, 56, 58 ), PoolIntArray( 58, 56, 59 ), PoolIntArray( 62, 61, 60 ), PoolIntArray( 64, 63, 65 ), PoolIntArray( 65, 63, 66 ), PoolIntArray( 66, 63, 67 ), PoolIntArray( 69, 68, 70 ), PoolIntArray( 70, 68, 71 ), PoolIntArray( 71, 68, 72 ), PoolIntArray( 74, 73, 75 ), PoolIntArray( 75, 73, 76 ), PoolIntArray( 79, 78, 77 ), PoolIntArray( 81, 80, 82 ), PoolIntArray( 82, 80, 83 ), PoolIntArray( 86, 85, 84 ), PoolIntArray( 88, 87, 89 ), PoolIntArray( 89, 87, 90 ), PoolIntArray( 93, 92, 91 ), PoolIntArray( 95, 94, 96 ), PoolIntArray( 96, 94, 97 ), PoolIntArray( 101, 100, 98 ), PoolIntArray( 98, 100, 99 ), PoolIntArray( 104, 103, 102 ), PoolIntArray( 106, 105, 107 ), PoolIntArray( 107, 105, 108 ), PoolIntArray( 110, 109, 111 ), PoolIntArray( 111, 109, 112 ), PoolIntArray( 116, 115, 113 ), PoolIntArray( 113, 115, 114 ), PoolIntArray( 118, 117, 119 ), PoolIntArray( 119, 117, 120 ), PoolIntArray( 122, 121, 123 ), PoolIntArray( 123, 121, 124 ), PoolIntArray( 126, 125, 127 ), PoolIntArray( 127, 125, 128 ), PoolIntArray( 130, 129, 131 ), PoolIntArray( 131, 129, 132 ), PoolIntArray( 134, 133, 135 ), PoolIntArray( 135, 133, 136 ), PoolIntArray( 138, 137, 139 ), PoolIntArray( 139, 137, 140 ), PoolIntArray( 142, 141, 143 ), PoolIntArray( 143, 141, 145 ), PoolIntArray( 143, 145, 144 ), PoolIntArray( 149, 148, 146 ), PoolIntArray( 146, 148, 147 ), PoolIntArray( 152, 151, 150 ), PoolIntArray( 155, 154, 153 ), PoolIntArray( 158, 157, 156 ), PoolIntArray( 161, 160, 159 ), PoolIntArray( 165, 164, 162 ), PoolIntArray( 162, 164, 163 ), PoolIntArray( 167, 166, 168 ), PoolIntArray( 168, 166, 169 ), PoolIntArray( 172, 171, 170 ), PoolIntArray( 174, 173, 175 ), PoolIntArray( 175, 173, 176 ), PoolIntArray( 179, 178, 177 ), PoolIntArray( 180, 182, 181 ), PoolIntArray( 183, 186, 184 ), PoolIntArray( 184, 186, 185 ), PoolIntArray( 189, 188, 187 ), PoolIntArray( 192, 191, 190 ), PoolIntArray( 194, 193, 195 ), PoolIntArray( 195, 193, 196 ), PoolIntArray( 200, 199, 197 ), PoolIntArray( 197, 199, 198 ), PoolIntArray( 203, 202, 201 ), PoolIntArray( 207, 206, 204 ), PoolIntArray( 204, 206, 205 ), PoolIntArray( 209, 208, 210 ), PoolIntArray( 210, 208, 212 ), PoolIntArray( 210, 212, 211 ), PoolIntArray( 215, 214, 213 ), PoolIntArray( 217, 216, 218 ), PoolIntArray( 218, 216, 220 ), PoolIntArray( 218, 220, 219 ), PoolIntArray( 223, 222, 221 ), PoolIntArray( 226, 225, 224 ), PoolIntArray( 228, 227, 229 ), PoolIntArray( 229, 227, 230 ), PoolIntArray( 231, 233, 232 ), PoolIntArray( 236, 235, 234 ), PoolIntArray( 239, 238, 237 ), PoolIntArray( 242, 241, 240 ), PoolIntArray( 244, 243, 245 ), PoolIntArray( 245, 243, 246 ), PoolIntArray( 248, 247, 249 ), PoolIntArray( 249, 247, 252 ), PoolIntArray( 249, 252, 251 ), PoolIntArray( 249, 251, 250 ), PoolIntArray( 254, 253, 255 ), PoolIntArray( 255, 253, 256 ), PoolIntArray( 258, 257, 259 ), PoolIntArray( 259, 257, 260 ), PoolIntArray( 263, 262, 261 ), PoolIntArray( 269, 268, 264 ), PoolIntArray( 264, 268, 267 ), PoolIntArray( 264, 267, 266 ), PoolIntArray( 264, 266, 265 ), PoolIntArray( 271, 270, 272 ), PoolIntArray( 272, 270, 273 ), PoolIntArray( 275, 274, 276 ), PoolIntArray( 276, 274, 277 ), PoolIntArray( 281, 280, 278 ), PoolIntArray( 278, 280, 279 ), PoolIntArray( 285, 284, 282 ), PoolIntArray( 282, 284, 283 ), PoolIntArray( 287, 286, 288 ), PoolIntArray( 288, 286, 289 ), PoolIntArray( 293, 292, 290 ), PoolIntArray( 290, 292, 291 ), PoolIntArray( 295, 294, 296 ), PoolIntArray( 296, 294, 297 ), PoolIntArray( 301, 300, 298 ), PoolIntArray( 298, 300, 299 ), PoolIntArray( 304, 303, 305 ), PoolIntArray( 305, 303, 302 ), PoolIntArray( 309, 308, 306 ), PoolIntArray( 306, 308, 307 ), PoolIntArray( 313, 312, 310 ), PoolIntArray( 310, 312, 311 ), PoolIntArray( 316, 315, 317 ), PoolIntArray( 317, 315, 314 ), PoolIntArray( 317, 314, 318 ), PoolIntArray( 324, 323, 319 ), PoolIntArray( 319, 323, 322 ), PoolIntArray( 319, 322, 321 ), PoolIntArray( 319, 321, 320 ), PoolIntArray( 328, 327, 325 ), PoolIntArray( 325, 327, 326 ), PoolIntArray( 334, 333, 329 ), PoolIntArray( 329, 333, 332 ), PoolIntArray( 329, 332, 331 ), PoolIntArray( 329, 331, 330 ), PoolIntArray( 338, 337, 335 ), PoolIntArray( 335, 337, 336 ), PoolIntArray( 340, 339, 341 ), PoolIntArray( 341, 339, 342 ), PoolIntArray( 346, 345, 343 ), PoolIntArray( 343, 345, 344 ), PoolIntArray( 348, 347, 349 ), PoolIntArray( 349, 347, 350 ), PoolIntArray( 354, 353, 351 ), PoolIntArray( 351, 353, 352 ), PoolIntArray( 358, 357, 355 ), PoolIntArray( 355, 357, 356 ), PoolIntArray( 362, 361, 359 ), PoolIntArray( 359, 361, 360 ), PoolIntArray( 366, 365, 363 ), PoolIntArray( 363, 365, 364 ), PoolIntArray( 370, 369, 367 ), PoolIntArray( 367, 369, 368 ), PoolIntArray( 374, 373, 371 ), PoolIntArray( 371, 373, 372 ), PoolIntArray( 378, 377, 375 ), PoolIntArray( 375, 377, 376 ), PoolIntArray( 382, 381, 379 ), PoolIntArray( 379, 381, 380 ), PoolIntArray( 385, 384, 383 ) ]
sample_partition_type/sample_partition_type = 2
geometry/parsed_geometry_type = 2
geometry/collision_mask = 4294967280
geometry/source_geometry_mode = 1
geometry/source_group_name = "navmesh"

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.33959, 4.56245, -5.32368 )
speed = 10

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1, 0 )
extents = Vector3( 65.291, 10, 55.5838 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.78917, -1.17595e-08, 0.614175, -0.547161, 0.454224, 0.703062, -0.278973, -0.890888, 0.35846, 60.6992, 41.8637, 59.2342 )
light_energy = 0.167

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -45.3114, 53.2693, 0 )
projection = 1
size = 55.33
near = 0.01
far = 194.5

[node name="Control" parent="." instance=ExtResource( 5 )]

[node name="TestFloor" type="StaticBody" parent="." groups=["navmesh"]]
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor"]
shape = SubResource( 3 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Heartbeat" type="Timer" parent="."]
autostart = true

[node name="Path" type="Path" parent="."]
curve = SubResource( 4 )

[node name="PathFollow" type="PathFollow" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.9838, 0, -47.6759 )

[node name="ItemSpawner" parent="." instance=ExtResource( 7 )]
spawnPath = NodePath("../Path/PathFollow")

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 5 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.00233, 0, 0, 0, 1.00233, 0, 0, 0, 1.00233, 0, 11.752, 0 )
speed = 5
drawPath = NodePath("../Draw")

[node name="Draw" type="ImmediateGeometry" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="TestFloor2" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( 0.399473, 0, 0, 0, 1.842, 0, 0, 0, 0.0262937, 0, 3.32171, 12.2761 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor2"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor2"]
shape = SubResource( 3 )

[node name="TestFloor3" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( -1.74615e-08, 0, -0.0262937, 0, 1.842, 0, 0.399473, 0, -1.14933e-09, -23.8439, 3.32171, 29.9424 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor3"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Mesh2" type="MeshInstance" parent="TestFloor3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.62939e-06, 0, -1713.12 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Mesh3" type="MeshInstance" parent="TestFloor3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52588e-05, 0, -1713.12 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor3"]
shape = SubResource( 3 )

[node name="TestFloor4" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( -0.144015, 0, 8.28695e-10, 0, 1.842, 0, -3.49231e-08, 0, -0.0262937, -15.3439, 3.32171, 21.8411 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor4"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor4"]
shape = SubResource( 3 )

[node name="TestFloor5" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( -0.290497, -0.0184226, -0.000232627, -0.00071444, 1.84198, 1.63042e-05, 0.000631162, 0.00118225, -0.0262934, 12.1965, 3.32171, 21.6675 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor5"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor5"]
transform = Transform( 1, -6.59202e-09, 0, -1.56035e-11, 1, 0, -1.86265e-09, -3.72529e-09, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="TestFloor6" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( -0.290497, -0.0184226, -0.000232627, -0.00071444, 1.84198, 1.63042e-05, 0.000631162, 0.00118225, -0.0262934, -4.08917, 3.32171, 33.1077 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor6"]
transform = Transform( 1.4948, 0.0313792, 0.000396233, 0.000191812, 1.00001, 1.53593e-07, 0.0118862, 0.000753812, 1.00001, -24.4777, -0.00948882, -0.588013 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor6"]
transform = Transform( 1, -6.59202e-09, 0, -1.56035e-11, 1, 0, -1.86265e-09, -3.72529e-09, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="TestFloor7" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( -0.290497, -0.0184226, -0.000232627, -0.00071444, 1.84198, 1.63042e-05, 0.000631162, 0.00118225, -0.0262934, 8.11243, 3.42916, 42.395 )
collision_layer = 8
collision_mask = 15

[node name="Mesh" type="MeshInstance" parent="TestFloor7"]
transform = Transform( 1.61562, 0.0390411, 0.000492983, 0.000238648, 1.00001, 1.91099e-07, 0.0147884, 0.000937894, 1.00001, 51.8036, 0.0192834, 91.4493 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="TestFloor7"]
transform = Transform( 1.68303, 0.043316, 0.000546962, 0.000264779, 1.00002, 2.1202e-07, 0.0164077, 0.00104057, 1.00001, 56.4625, 0.0210402, 97.1029 )
shape = SubResource( 3 )

[connection signal="enemy_timer_changed" from="." to="Control" method="_on_Main_enemy_timer_changed"]
[connection signal="player_moved" from="Player" to="." method="_on_Player_player_moved"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="Heartbeat" to="." method="_on_Heartbeat_timeout"]
